@@ -1,16 +1,22 @@
 package com.ecommerce.project.controller;
 
-import com.ecommerce.project.configurations.AppRole;
+import com.ecommerce.project.model.AppRole;
 import com.ecommerce.project.model.Role;
 import com.ecommerce.project.model.User;
+import com.ecommerce.project.repositories.RoleRepository;
+import com.ecommerce.project.repositories.UserRepository;
 import com.ecommerce.project.security.jwt.JwtUtils;
 import com.ecommerce.project.security.request.LoginRequest;
-import com.ecommerce.project.security.request.SignUpRequest;
+import com.ecommerce.project.security.request.SignupRequest;
 import com.ecommerce.project.security.response.MessageResponse;
-import com.ecommerce.project.security.response.UserInforResponse;
+import com.ecommerce.project.security.response.UserInfoResponse;
 import com.ecommerce.project.security.services.UserDetailsImpl;
-import com.ecommerce.project.security.services.UserDetailsServiceImpl;
-import com.ecommerce.project.services.RoleServices;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
@@ -20,157 +26,165 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.AuthenticationException;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
+@Tag(name = "Authentication", description = "APIs for user authentication, registration, and user details management")
 @RestController
 @RequestMapping("/api/auth")
 public class AuthController {
 
     @Autowired
     private JwtUtils jwtUtils;
+
     @Autowired
     private AuthenticationManager authenticationManager;
 
     @Autowired
-    private UserDetailsServiceImpl userDetailsService;
-    @Autowired
-    private RoleServices roleServices;
-    @Autowired
-    private PasswordEncoder encoder;
+    UserRepository userRepository;
 
+    @Autowired
+    RoleRepository roleRepository;
+
+    @Autowired
+    PasswordEncoder encoder;
+
+    @Operation(summary = "User Sign In", description = "Authenticate user with username and password to generate a JWT token.")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Successfully authenticated the user"),
+            @ApiResponse(responseCode = "404", description = "Invalid username or password")
+    })
     @PostMapping("/signin")
     public ResponseEntity<?> authenticateUser(@RequestBody LoginRequest loginRequest) {
         Authentication authentication;
         try {
             authentication = authenticationManager
-                    .authenticate(new UsernamePasswordAuthenticationToken(
-                            loginRequest.getUsername(), loginRequest.getPassword()));
-
-
-        } catch (AuthenticationException e) {
+                    .authenticate(new UsernamePasswordAuthenticationToken(loginRequest.getUsername(), loginRequest.getPassword()));
+        } catch (AuthenticationException exception) {
             Map<String, Object> map = new HashMap<>();
             map.put("message", "Bad credentials");
             map.put("status", false);
             return new ResponseEntity<Object>(map, HttpStatus.NOT_FOUND);
-
         }
 
         SecurityContextHolder.getContext().setAuthentication(authentication);
-        UserDetailsImpl userDetail = (UserDetailsImpl) authentication.getPrincipal();
-        //  String jwtToken = jwtUtils.generateTokenFromUsername(userDetail.getUsername());
 
-        // let's get the Cookie from user
-        ResponseCookie cookie = jwtUtils.generateJwtCookie(userDetail);
+        UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
 
-        List<String> roles = userDetail.getAuthorities()
-                .stream().map(GrantedAuthority::getAuthority).toList();
-        UserInforResponse userInforResponse =
-                new UserInforResponse(
-                        userDetail.getId(),
-                        userDetail.getUsername(),
-                        roles);
+        ResponseCookie jwtCookie = jwtUtils.generateJwtCookie(userDetails);
 
-        // return new ResponseEntity<>(userInforResponse, HttpStatus.OK);
-        return ResponseEntity
-                .ok()
-                .header(HttpHeaders.SET_COOKIE, cookie.toString())
-                .body(userInforResponse);
+        List<String> roles = userDetails.getAuthorities().stream()
+                .map(item -> item.getAuthority())
+                .collect(Collectors.toList());
+
+        UserInfoResponse response = new UserInfoResponse(userDetails.getId(),
+                userDetails.getUsername(), roles, jwtCookie.toString());
+
+        return ResponseEntity.ok().header(HttpHeaders.SET_COOKIE,
+                        jwtCookie.toString())
+                .body(response);
     }
 
-
+    @Operation(summary = "User Registration", description = "Register a new user with username, email, and password.")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "User registered successfully"),
+            @ApiResponse(responseCode = "400", description = "Username or email already taken")
+    })
     @PostMapping("/signup")
-    public ResponseEntity<?> registerUser(@RequestBody SignUpRequest signUpRequest) {
-
-        System.out.println("Register new User");
-        if (userDetailsService.existsByUserName(signUpRequest.getUsername())) {
-            return ResponseEntity.badRequest().body(new MessageResponse("Error: Username is already taken"));
-        }
-        if (userDetailsService.existsByEmail(signUpRequest.getEmail())) {
-            return ResponseEntity.badRequest().body(new MessageResponse("Error: Email is already in use"));
+    public ResponseEntity<?> registerUser(@Valid @RequestBody SignupRequest signUpRequest) {
+        if (userRepository.existsByUserName(signUpRequest.getUsername())) {
+            return ResponseEntity.badRequest().body(new MessageResponse("Error: Username is already taken!"));
         }
 
-        // Create  new User's account
+        if (userRepository.existsByEmail(signUpRequest.getEmail())) {
+            return ResponseEntity.badRequest().body(new MessageResponse("Error: Email is already in use!"));
+        }
 
-        User user = new User(
-                signUpRequest.getUsername(),
+        // Create new user's account
+        User user = new User(signUpRequest.getUsername(),
                 signUpRequest.getEmail(),
                 encoder.encode(signUpRequest.getPassword()));
+
         Set<String> strRoles = signUpRequest.getRole();
         Set<Role> roles = new HashSet<>();
+
         if (strRoles == null) {
-            Role userRole = roleServices.findByRoleName(AppRole.ROLE_USER);
+            Role userRole = roleRepository.findByRoleName(AppRole.ROLE_USER)
+                    .orElseThrow(() -> new RuntimeException("Error: Role is not found."));
             roles.add(userRole);
         } else {
             strRoles.forEach(role -> {
                 switch (role) {
-                    case "admin" -> {
-                        Role adminRole = roleServices.findByRoleName(AppRole.ROLE_ADMIN);
+                    case "admin":
+                        Role adminRole = roleRepository.findByRoleName(AppRole.ROLE_ADMIN)
+                                .orElseThrow(() -> new RuntimeException("Error: Role is not found."));
                         roles.add(adminRole);
-                    }
-                    case "seller" -> {
-                        Role sellerRole = roleServices.findByRoleName(AppRole.ROLE_SELLER);
+                        break;
+                    case "seller":
+                        Role sellerRole = roleRepository.findByRoleName(AppRole.ROLE_SELLER)
+                                .orElseThrow(() -> new RuntimeException("Error: Role is not found."));
                         roles.add(sellerRole);
-                    }
-                    default -> {
-                        Role userRole = roleServices.findByRoleName(AppRole.ROLE_USER);
+                        break;
+                    default:
+                        Role userRole = roleRepository.findByRoleName(AppRole.ROLE_USER)
+                                .orElseThrow(() -> new RuntimeException("Error: Role is not found."));
                         roles.add(userRole);
-                    }
                 }
             });
         }
+
         user.setRoles(roles);
-        User savedUser = userDetailsService.save(user);
+        userRepository.save(user);
+
         return ResponseEntity.ok(new MessageResponse("User registered successfully!"));
     }
 
-    @PostMapping("/signout")
-    public ResponseEntity<?> signOut() {
-        ResponseCookie cleanJwtCookie = jwtUtils.generateCleanJwtCookie();
-
-        return ResponseEntity
-                .ok()
-                .header(HttpHeaders.SET_COOKIE, cleanJwtCookie.toString())
-                .body(new MessageResponse("User logged out successfully"));
-    }
-
+    @Operation(summary = "Get Current User's Username", description = "Get the username of the currently authenticated user.")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Successfully fetched username"),
+            @ApiResponse(responseCode = "401", description = "User is not authenticated")
+    })
     @GetMapping("/username")
-    public String getCurrentUsername(Authentication authentication) {
-        if (authentication != null) {
+    public String currentUserName(Authentication authentication){
+        if (authentication != null)
             return authentication.getName();
-        } else {
-            return "NULL";
-        }
+        else
+            return "";
     }
 
+    @Operation(summary = "Get Current User's Details", description = "Get the details of the currently authenticated user.")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Successfully fetched user details"),
+            @ApiResponse(responseCode = "401", description = "User is not authenticated")
+    })
     @GetMapping("/user")
-    public ResponseEntity<?> getUserInfo(Authentication authentication) {
-
+    public ResponseEntity<?> getUserDetails(Authentication authentication){
         UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
 
-        List<String> roles = userDetails.getAuthorities()
-                .stream().map(GrantedAuthority::getAuthority).toList();
-        UserInforResponse userInforResponse =
-                new UserInforResponse(
-                        userDetails.getId(),
-                        userDetails.getUsername(),
-                        roles);
+        List<String> roles = userDetails.getAuthorities().stream()
+                .map(item -> item.getAuthority())
+                .collect(Collectors.toList());
 
-        // return new ResponseEntity<>(userInforResponse, HttpStatus.OK);
-        return ResponseEntity
-                .ok()
-                .body(userInforResponse);
+        UserInfoResponse response = new UserInfoResponse(userDetails.getId(),
+                userDetails.getUsername(), roles);
 
+        return ResponseEntity.ok().body(response);
     }
 
-    @GetMapping("/sellers")
-    public ResponseEntity<?> getAllSellers() {
-
-        return null;
+    @Operation(summary = "Sign Out User", description = "Log out the user by clearing the JWT cookie.")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Successfully signed out"),
+            @ApiResponse(responseCode = "400", description = "Error while signing out")
+    })
+    @PostMapping("/signout")
+    public ResponseEntity<?> signoutUser(){
+        ResponseCookie cookie = jwtUtils.getCleanJwtCookie();
+        return ResponseEntity.ok().header(HttpHeaders.SET_COOKIE,
+                        cookie.toString())
+                .body(new MessageResponse("You've been signed out!"));
     }
-
 }
